--- a/about.html
+++ b/about.html
@@ -38,27 +38,30 @@
         <div class="container">
             <article id="main-col">
                 <h1>About Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore etdolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore etdolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec auctor arcu. Morbi libero magna,
+                    condimentum at tempor tristique, finibus nec nulla. Duis eleifend mi vel dui blandit venenatis.
+                    Donec ac ipsum a mauris tincidunt porta ac nec nunc. Nullam venenatis eu enim quis porttitor. Ut
+                    finibus, dolor vel euismod aliquet, dolor augue vehicula lorem, nec iaculis lorem velit pellentesque
+                    urna. Sed efficitur risus tempor turpis tincidunt dapibus. In hac habitasse platea dictumst.
+                    Maecenas metus nunc, eleifend eget placerat id, vulputate vitae felis. Pellentesque imperdiet nisl
+                    at efficitur varius. Donec id velit libero. Curabitur in enim condimentum, hendrerit nunc id, varius
+                    libero. Suspendisse sed mauris finibus libero facilisis lacinia id vitae est. </p>
+                <p> Phasellus rhoncus erat ac est varius, et bibendum tortor ullamcorper. Aenean cursus turpis a sapien
+                    facilisis rhoncus. Cras congue lacinia vehicula. Aenean tristique leo sit amet tincidunt vestibulum.
+                    Cras in sagittis enim. Phasellus eget magna libero. Proin vitae nisl in urna eleifend tempus. Cras
+                    in eros auctor, maximus dolor convallis, sodales erat. Duis nec velit non velit commodo pretium.
+                    Phasellus ullamcorper justo non fermentum rutrum. Sed vitae mi aliquet, lobortis erat non, eleifend
+                    nulla. Integer sollicitudin metus sit amet elit viverra cursus. Nullam porttitor, sapien in posuere
+                    ornare, mauris nulla accumsan enim, nec semper leo mi id massa. Proin nec leo tincidunt, luctus urna
+                    a, congue est. </p>
             </article>
 
             <aside id="sidebar">
                 <div class="dark">
                     <h3>What We do</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore etdolore magna aliqua Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna
-                        aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec auctor arcu. Morbi libero
+                        magna, condimentum at tempor tristique, finibus nec nulla. Duis eleifend mi vel dui blandit
+                        venenatis. Donec ac ipsum a mauris tincidunt porta ac nec nunc. </p>
                 </div>
             </aside>
         </div>
